Modification de la nav + style nav

--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -19,7 +19,7 @@
 .logo-text {
   font-size: 1.3rem;
   font-weight: 700;
-  color: var(--white);
+  color: var(--black);
   letter-spacing: 1px;
 }
 
